[package]
name = "dbes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json  = "1.0.68"
uuid        = { version = "0.8.2", features = ["v4"] }
md5         = "0.7.0"
serde       = { version = "1.0.130", features = ["derive"] }
fxhash      = "0.2.1"
tantivy     = "0.16.1"

[dev-dependencies]
criterion = "0.3.5"
slab        = "0.4.5"
seahash     = "4.1.0"
ahash       = { version = "0.7.6", features = ["std"] }

[dependencies.my_macro]
path = "../my_macro"

[[bench]]
name = "bench"
harness = false

# [profile.release]
# panic = "abort"
# codegen-units = 1
# debug = false # true
# lto = true
# opt-level = 3 #"s"